Добавление в переменные окружения все секретные параметры

--- a/.env_sample
+++ b/.env_sample
@@ -1,3 +1,16 @@
-POSTGRES_PASSWORD = your_password
-EMAIL_HOST_USER = your_email_user
-EMAIL_HOST_PASSWORD = your_email_password
+DEBUG =
+
+DATABASES_NAME =
+DATABASES_USER =
+DATABASES_PASSWORD =
+DATABASES_HOST =
+DATABASES_PORT =
+
+EMAIL_HOST =
+EMAIL_PORT =
+EMAIL_HOST_USER =
+EMAIL_HOST_PASSWORD =
+EMAIL_USE_TLS =
+EMAIL_USE_SSL =
+
+LOCATION =
